# lab_manage

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  初始化数据库文件.rar
Table创建器/dataBase_data/: table_settings
dataBase_data/: Book  User_hash  table_settings
database/: catch_core.cpp  database.cpp  database.h  index.cpp  libDB.h  menu.cpp  run_test.cpp  statu.cpp  test_data_delete.txt  test_database.cpp  test_index.cpp  test_statu.cpp  用户  谭谭种类
database - 副本/: database.h
database - 副本/code/: cmdui.cpp  index.cpp  run_test.cpp  settings.h  statu.cpp  test_index.cpp  test_statu.cpp
database/code/: HanString.cpp  cmdui.h  database.cpp  index.h  menu.cpp  settings.cpp  statu.cpp  statu.h  test_database.cpp
database/test/: test.cpp  test_data.txt
databaseBackup/: catch.hpp  index.h  settings.h  statu.h  table_settings_name.ini  test  书  书_hash  书_hash_delete  用户_hash  谭谭种类_hash
databaseBackup/新建文件夹/: Book_hash  table_settings
database_v1.0/: database.cpp  helloworld.cpp  table_settings_name.ini  test  test.cpp  书
dev-Tan/: books.csv  books2.csv  booksError.csv  libManage.db  main.cpp  main2.cpp  users.csv  usersError.csv
dev-test/: beautifulMenu.cpp  main.cpp  menuTest.cpp
include/: CMakeLists.txt  libm.h
include/core/: Date.h  Input.h  Library.h  MD5.h  SimpleString.h  SimpleTime.h  Time.h
include/model/: Admin.h  Book.h  BookInstance.h  Order.h  User.h
include/service/: BookInstanceService.h  BookService.h  UserService.h
include/util/: BookInstanceDbAdapter.h  Bookcopy.h  DbAdapter.h  OrderDbAdapter.h  TableRecord.h  TableRenderer.h
linkDatebase/: datacpp.h
linkDatebase/include/: Bookcopy.h  IndexRecord.h  Logs.h  Record.h  TableBookcopy.h  TableRecord.h
linkDatebase/src/: Bookcopy.cpp  IndexRecord.cpp  Logs.cpp  Record.cpp  TableBookcopy.cpp  TableRecord.cpp  Test.cpp
src/: libcpp.h
src/core/: Date.cpp  Input.cpp  Library.cpp  MD5.cpp  SimpleString.cpp  SimpleTime.cpp  Time.cpp
src/include/: Admin.h  Book.h  Date.h  Order.h  SimpleTime.h  Time.h  User.h  resource.h
src/main/: Admin.cpp  Book.cpp  Date.cpp  Order.cpp  SimpleTime.cpp  Time.cpp  User.cpp  main.cpp  test.cpp
src/model/: Admin.cpp  Book.cpp  BookInstance.cpp  Order.cpp  User.cpp
src/service/: BookInstanceService.cpp  BookService.cpp  UserService.cpp
src/util/: BookInstanceDbAdapter.cpp  DbAdapter.cpp  OrderDbAdapter.cpp  TableRenderer.cpp
test/: CMakeLists.txt  DateTest.cpp  Library.cpp  UserTest.cpp  catch.hpp  main.cpp  menuTest.cpp
yu/: Usertest.cpp  Verify.cpp  Verify.h  drawTesr.cpp
初始化数据库文件/: Book  User  User_hash  table_bookcopy  主程序.rar
初始化数据库文件/主程序/: Book  Book_hash  User  使用说明.txt
初始化数据库文件/数据库2/dataBase_data/: Book  Book_hash  User  User_hash  table_settings
用这里的数据库文件覆盖啊/: table_bookcopy
用这里的数据库文件覆盖啊/dataBase_data/: Book  Book_hash  User
